# controller/kubernetes_controller.go
@@ -5,7 +5,6 @@ import (
 	"github.com/labstack/echo/v4"
 	"net/http"
 	"taking.kr/velero/clients"
-	"taking.kr/velero/services"
 	"taking.kr/velero/utils"
 )
 
@@ -34,19 +33,22 @@ func NewKubernetesController() *KubernetesController {
 // @Failure 503 {object} models.SwaggerErrorResponse "서비스 이용 불가"
 // @Router /kube/health [get]
 func (c *KubernetesController) CheckKubernetesConnection(ctx echo.Context) error {
+	// KubeConfig 바인딩 및 검증
 	req, err := c.BindAndValidateKubeConfig(ctx)
 	if err != nil {
 		return err
 	}
 
-	namespace := c.ResolveNamespace(&req, ctx, "default")
-	req.Namespace = namespace
+	// 네임스페이스 값이 없으면, 기본 네임스페이스 "default"로 설정
+	req.Namespace = c.ResolveNamespace(&req, ctx, "default")
 
+	// Kubernetes 클라이언트 생성
 	client, err := clients.NewKubeClient(req)
 	if err != nil {
 		return utils.RespondError(ctx, http.StatusInternalServerError, err.Error())
 	}
 
+	// Kubernetes 연결 상태 확인
 	return c.HandleHealthCheck(ctx, client, "Kubernetes")
 }
 
@@ -64,18 +66,20 @@ func (c *KubernetesController) CheckKubernetesConnection(ctx echo.Context) error
 // @Failure 503 {object} models.SwaggerErrorResponse "서비스 이용 불가"
 // @Router /kube/pods [get]
 func (c *KubernetesController) GetPods(ctx echo.Context) error {
+	// KubeConfig 바인딩 및 검증
 	req, err := c.BindAndValidateKubeConfig(ctx)
 	if err != nil {
 		return err
 	}
 
+	// Kubernetes 클라이언트 생성
 	client, err := clients.NewKubeClient(req)
 	if err != nil {
 		return utils.RespondError(ctx, http.StatusInternalServerError, err.Error())
 	}
 
-	service := services.NewKubernetesService(client)
-	data, err := service.GetPods(ctx.Request().Context())
+	// 파드 목록 조회
+	data, err := client.GetPods(context.Background())
 	if err != nil {
 		return utils.RespondError(ctx, http.StatusInternalServerError, err.Error())
 	}
@@ -85,37 +89,20 @@ func (c *KubernetesController) GetPods(ctx echo.Context) error {
 
 // GetStorageClasses : 클러스터 내 StorageClass 조회
 func (c *KubernetesController) GetStorageClasses(ctx echo.Context) error {
+	// KubeConfig 바인딩 및 검증
 	req, err := c.BindAndValidateKubeConfig(ctx)
 	if err != nil {
 		return err
 	}
 
+	// Kubernetes 클라이언트 생성
 	client, err := clients.NewKubeClient(req)
 	if err != nil {
 		return utils.RespondError(ctx, http.StatusInternalServerError, err.Error())
 	}
 
+	// 스토리지 클래스 목록 조회
 	data, err := client.GetStorageClasses(context.Background())
-	if err != nil {
-		return utils.RespondError(ctx, http.StatusInternalServerError, err.Error())
-	}
-
-	return utils.RespondSuccess(ctx, data)
-}
-
-func (c *KubernetesController) GetPodsAndStorage(ctx echo.Context) error {
-	req, err := c.BindAndValidateKubeConfig(ctx)
-	if err != nil {
-		return err
-	}
-
-	client, err := clients.NewKubeClient(req)
-	if err != nil {
-		return utils.RespondError(ctx, http.StatusInternalServerError, err.Error())
-	}
-
-	service := services.NewKubernetesService(client)
-	data, err := service.GetPodsWithStorageClasses(ctx.Request().Context())
 	if err != nil {
 		return utils.RespondError(ctx, http.StatusInternalServerError, err.Error())
 	}
