# helpers/common.go
@@ -26,6 +26,42 @@ func BindAndValidateKubeConfig(ctx echo.Context, validator *validation.Kubernete
 	return req, nil
 }
 
+// BindAndValidateMinioConfig : 요청 바인딩 + minioConfig 유효성 검사
+func BindAndValidateMinioConfig(ctx echo.Context, minioValidator *validation.MinioValidator) (models.MinioConfig, error) {
+	var req models.MinioConfig
+	if err := ctx.Bind(&req); err != nil {
+		return req, utils.RespondError(ctx, http.StatusBadRequest, "invalid request body")
+	}
+
+	// minio config validator
+	if err := minioValidator.ValidateMinioConfig(&req); err != nil {
+		return req, fmt.Errorf("minio config validation failed: %w", err)
+	}
+	return req, nil
+}
+
+// BindAndValidateVeleroConfig : minioConfig, kubeConfig 요청 바인딩 + kubeConfig 유효성 검사
+func BindAndValidateVeleroConfig(ctx echo.Context, minioValidator *validation.MinioValidator, kubernetesValidator *validation.KubernetesValidator) (models.VeleroConfig, error) {
+	var req models.VeleroConfig
+	if err := ctx.Bind(&req); err != nil {
+		return req, utils.RespondError(ctx, http.StatusBadRequest, "invalid request body")
+	}
+
+	// minio config validator
+	if err := minioValidator.ValidateMinioConfig(&req.MinioConfig); err != nil {
+		return req, fmt.Errorf("minio config validation failed: %w", err)
+	}
+
+	// Kubernetes config validator & base64 Decode
+	decodeKubeConfig, err := kubernetesValidator.ValidateKubernetesConfig(&req.KubeConfig)
+	if err != nil {
+		return req, echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+
+	req.KubeConfig.KubeConfig = decodeKubeConfig
+	return req, nil
+}
+
 // ResolveNamespace : namespace 확인 (요청 > query > 기본값)
 func ResolveNamespace(req *models.KubeConfig, ctx echo.Context, defaultNS string) string {
 	if req.Namespace != "" {
