# models/config.go
@@ -7,8 +7,15 @@ type KubeConfig struct {
 }
 
 type MinioConfig struct {
-	Endpoint  string `json:"endpoint"`
-	AccessKey string `json:"accessKey"`
-	SecretKey string `json:"secretKey"`
-	UseSSL    bool   `json:"useSSL"`
+	Endpoint   string `json:"endpoint"`
+	AccessKey  string `json:"accessKey"`
+	SecretKey  string `json:"secretKey"`
+	UseSSL     bool   `json:"useSSL"`
+	BucketName string `json:"bucketName,omitempty"`
+	Region     string `json:"region,omitempty"`
+}
+
+type VeleroConfig struct {
+	MinioConfig `json:"minio"`
+	KubeConfig  `json:"kubernetes"`
 }
